force-app/main/default/objects/Contract_Attachment__c/Contract_Attachment__c.object-meta.xml
<CustomObject>
    <label>Contract Attachment</label>
    <nameField>
        <label>Contract Attachment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Attachment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>