force-app/main/default/objects/Contract_Attachment__c/fields/Attachment_Link__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Link__c</fullName>
    <formula>HYPERLINK( Link__c , Name )</formula>
    <label>Attachment Link</label>
    <type>Text</type>
</CustomField>