force-app/main/default/objects/Contract_Attachment__c/fields/Attachment_Name__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Name__c</fullName>
    <label>Attachment Name</label>
    <length>512</length>
    <type>Html</type>
</CustomField>